--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports: stats,
          MASS, 
          tidyr
 Suggests: h2o
-License: GPL (>=2)
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
