Improvements to allow minimum number of bills per term and to use firth logistic regression to calcualte PREs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports: stats,
          Matrix, 
          rlang, 
          MASS, 
-         tidyr
+         tidyr, 
+         logistf
 Suggests: h2o
 License: GPL-2
 Encoding: UTF-8
