--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(emIRT,convertRC)
 importFrom(emIRT,dynIRT)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
+importFrom(logistf,logistf)
 importFrom(magrittr,`%>%`)
 importFrom(pscl,rollcall)
 importFrom(rlang,.data)
