--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(agree_score)
 export(calc_pres)
 export(choose_best)
+export(flip)
 export(gather_data)
 export(getPRE)
 export(impute_pca)
@@ -11,6 +12,7 @@ export(legR)
 export(make_data)
 export(make_priors)
 export(make_starts)
+export(orthogonalize)
 export(remove_lop)
 importFrom(MASS,mvrnorm)
 importFrom(Matrix,Matrix)
@@ -25,7 +27,10 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
+importFrom(dplyr,slice_max)
 importFrom(emIRT,boot_emIRT)
 importFrom(emIRT,convertRC)
 importFrom(emIRT,dynIRT)
@@ -38,10 +43,13 @@ importFrom(rlang,.data)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
 importFrom(stats,na.omit)
 importFrom(stats,plogis)
 importFrom(stats,pnorm)
@@ -53,6 +61,7 @@ importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(tidyr,as_tibble)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(utils,installed.packages)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
